--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,15 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.3"
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
     androidTestImplementation composeBom
 
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
