--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+# MAC OS Folder attribute files
+*.DS_Store
+app/.DS_Store
+app/src/.DS_Store
+.DS_Store
