--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.9.0'
     def nav_version = "2.5.3"
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
